--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
         </div>
         <form name="trial-form">
-          <input type="input" placeholder="First Name" />
+          <input type="input" name="first-name" placeholder="First Name" />
           <label>First Name cannot be empty</label>
-          <input type="input" placeholder="Last Name" />
+          <input type="input" name="last-name" placeholder="Last Name" />
           <label>First Name cannot be empty</label>
-          <input type="email" placeholder="Email Address" />
+          <input type="email" name="email" placeholder="Email Address" />
           <label>Looks like this is not an email</label>
-          <input type="password" placeholder="Password" />
+          <input type="password" name="password" placeholder="Password" />
           <label>First Name cannot be empty</label>
 
           <button type="submit">
