--- a/index.html
+++ b/index.html
@@ -25,13 +25,33 @@
           <p><strong>Try it free 7 days</strong> then $20/mo. thereafter</p>
         </div>
         <form name="trial-form">
-          <input type="input" name="first-name" placeholder="First Name" />
+          <input
+            aria-label="First Name"
+            type="input"
+            name="first-name"
+            placeholder="First Name"
+          />
           <label>First Name cannot be empty</label>
-          <input type="input" name="last-name" placeholder="Last Name" />
+          <input
+            aria-label="Last Name"
+            type="input"
+            name="last-name"
+            placeholder="Last Name"
+          />
           <label>First Name cannot be empty</label>
-          <input type="email" name="email" placeholder="Email Address" />
+          <input
+            aria-label="Email"
+            type="email"
+            name="email"
+            placeholder="Email Address"
+          />
           <label>Looks like this is not an email</label>
-          <input type="password" name="password" placeholder="Password" />
+          <input
+            aria-label="Password"
+            type="password"
+            name="password"
+            placeholder="Password"
+          />
           <label>First Name cannot be empty</label>
 
           <button type="submit">
